# system

./: .env  .env.backup2  .env.example  .gitignore  DEPLOYMENT_GUIDE.md  PROGRESS_BAR_FIX_REPORT.md  README.md  README_部署工具.md  analyze_network_usage.py  annotated_test_result_20250903_210224.json  camera_backend_cache.json  camera_debug_tool.html  check_database.py  database_info.json  database_query_test.html  database_websocket_fix_summary.py  debug_camera_error_fixed.py  debug_frontend.html  deploy.py  docker-compose.dev.yml  expand_task_status.py  fix_database_password.py  main.py  package-lock.json  package.json  pyproject.toml  quick_database_setup.py  quick_realtime_test.py  quick_test_standalone.py  realtime_websocket_test.html  requirements.txt  simple_api_speed_test.py  simple_delete_test.py  start.py  stream_test_advanced.html  system_restart_verification.py  temp_patch.txt  test_add_analysis_tasks.py  test_camera_api_format.py  test_camera_fix.py  (+30 more)
.github/: copilot-instructions.md
FallSafe-yolo11-main/: .env.example  .gitignore  Email.py  LICENSE  Message.py  README.md  Real-Time-Detection.py  Whatsapp.py  requirements.txt
analysis_results/: detections_20250903_210224.csv
app/: __init__.py
client/: .gitignore  README.md  index.html  package.json  vite.config.ts
data/: database_backup_config.json
docs/: CAMERA_RESOURCE_CONFLICT_FIX_REPORT.md  CAMERA_SCAN_INTEGRATION_REPORT.md  YOLOv11 程式設計建議：完整的實作指南.md  攝影機狀態監控修復報告.md  組員部署指南.md
react web/: package-lock.json  package.json
scripts/: camera_count_verification.py  check_camera_streams.py  (+59 more)
(+407 files in other folders)
