[project]
name = "system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.117.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.43",
    "ultralytics>=8.3.202",
]
